{
    "name": "PlayerInputAction",
    "maps": [
        {
            "name": "Player",
            "id": "155bbf11-6430-48b5-9fb7-035110e027b1",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "1f94b72a-60fa-46ae-902b-06813ac2badf",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "f202edb5-56ab-4b95-92b0-05d254b815d8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Pickup",
                    "type": "Button",
                    "id": "18814d12-7497-4be8-bef1-5109bfb6c0ee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Open",
                    "type": "Button",
                    "id": "9c52eb54-361d-4912-bc7f-274b79a87401",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "90480895-2777-4bd2-abe2-ff63e7e1ac40",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse&Keyboard",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7152d4b7-5747-4e08-8433-a07233909b76",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f97b1702-42d0-4fe7-b922-62cd2f5ce0b4",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse&Keyboard",
                    "action": "Pickup",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "37ac5b6b-91e5-4c19-ab62-198c7f94ffc8",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Pickup",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "5f182ae0-a1ce-4b46-a9cb-1f7ee2e9a2f5",
                    "path": "2DVector(mode=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "d35c493b-22ca-4ba9-b3b4-d99207df110e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse&Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "e2755f6c-02f2-4d1e-b9d4-61bcddb1d6b7",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse&Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "f50d1dd6-679b-4c28-897e-f699b9de1804",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse&Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "9bf52d82-616c-4dc3-b06b-84c1a59fc771",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse&Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "9e458cc9-4001-4377-b184-c0063a43c472",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "340652e4-e274-41d8-b433-6c57b4917365",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse&Keyboard",
                    "action": "Open",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9526085d-44a8-47ed-b421-513084f75a9a",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Open",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "1a9c0f36-e5bc-4ba3-8eed-31fd8d14e25c",
            "actions": [
                {
                    "name": "InventoryMenu",
                    "type": "Button",
                    "id": "af6b0835-ca7e-432e-9610-8071cc19694c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PauseMenu",
                    "type": "Button",
                    "id": "d66d6587-3176-4868-9a1b-7dcc8cd8737c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "JournalSystem",
                    "type": "Button",
                    "id": "d670c2d7-d7b2-4e91-8432-f8c3e6509a3b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "58061fdd-1685-42b9-b5a1-4da961033b79",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse&Keyboard",
                    "action": "InventoryMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "604f769f-a13c-40b8-a90b-90b41e7db2e3",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "858fa3ab-8f12-4d6e-8548-66f7214501fc",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JournalSystem",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mouse&Keyboard",
            "bindingGroup": "Mouse&Keyboard",
            "devices": []
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": []
        }
    ]
}